@@ -1,6 +1,10 @@
 Revision history for Plack-Middleware-Statsd
 
 {{$NEXT}}
+  [Documentation]
+  - Added missing section about the sample_rate attribute.
+
+  - Fixed typo in SYNOPSIS.
 
 v0.3.1    2018-02-10 23:22:47+00:00 Europe/London
   [Enhancements]
